--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,25 @@
             <version>2.15.2</version>
         </dependency>
 
+
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-core</artifactId>
+
+                <scope>test</scope>
+            </dependency>
+
+
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-junit-jupiter</artifactId>
+                <scope>test</scope>
+            </dependency>
+
+
+
+
+
     </dependencies>
 
     <build>
